fix theme of viewer

--- a/themes/viewer/default.html
+++ b/themes/viewer/default.html
@@ -28,7 +28,7 @@
             </div>
 
             <div class="main">
-                <div id="right_col">$right</div>
+                <div id="right_col">$right_col</div>
 				<div id="content">$content</div>
 				<div class="clear"></div>
             </div>
