--- a/themes/viewer/default.html
+++ b/themes/viewer/default.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+  <title>
+    $title
+  </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>易度云查看: 在线文档查看最佳解决方案 - 易度云办公旗下网站</title>
 <meta content="易度云查看：一，支持上百种文件格式转换；二，提供 8 种查看方式，浏览器、手机都可以轻松浏览；三，按需扩展，运维便捷。从转换到查看，再到运维，易度提供了整体的解决方案。" name="description" />
