--- a/themes/viewer/default.html
+++ b/themes/viewer/default.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-    $title
+    $title - $site_title
   </title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>易度云查看: 在线文档查看最佳解决方案 - 易度云办公旗下网站</title>
-<meta content="易度云查看：一，支持上百种文件格式转换；二，提供 8 种查看方式，浏览器、手机都可以轻松浏览；三，按需扩展，运维便捷。从转换到查看，再到运维，易度提供了整体的解决方案。" name="description" />
+<meta content="$description" name="description" />
 <meta content="在线文档查看,云查看" name="keyword" />
 <link href="$theme_base/style/reset.css?v=20110812" rel="stylesheet" type="text/css" />
 <link href="$theme_base/style/style.css?v=20110830" rel="stylesheet" type="text/css" />
