--- a/themes/viewer/default.html
+++ b/themes/viewer/default.html
@@ -57,7 +57,7 @@
             var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
             document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F452d6aeb4344162a8c68dd1b3c147ded' type='text/javascript'%3E%3C/script%3E"));
         </script>
-        <script src="http://s20.cnzz.com/stat.php?id=3040160&web_id=3040160&    show=pic" language="JavaScript"></script>
+        <script src="http://s14.cnzz.com/stat.php?id=3380953&web_id=3380953" language="JavaScript"> 
     </div>
 
 </body>
