更改公司名称

--- a/themes/viewer/default.html
+++ b/themes/viewer/default.html
@@ -39,7 +39,7 @@
             <div class="foot">
                 <p class="l">
                     易度云查看: 在线文档查看最佳解决方案 |
-					润普网络科技有限公司 版权所有 &copy; 2002-2013 粤ICP备11098433
+					广州润普网络科技有限公司 版权所有 &copy; 2002-2013 粤ICP备11098433
                 </p>
                 <p class="r right"><a href="http://www.everydo.com/" target="_blank">易度云办公旗下网站</a></p>
                 <div class="clear"></div>
