--- a/themes/bootstrap/home.html
+++ b/themes/bootstrap/home.html
@@ -29,7 +29,7 @@
   <script src="http://viewer.everydo.com:9870/edoviewer/edo_viewer.js"></script>
   </head>
 
-  <body style="">
+  <body>
 
     <!-- Fixed navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
