完成首页模板更新

--- a/themes/bootstrap/home.html
+++ b/themes/bootstrap/home.html
@@ -59,7 +59,7 @@
      
     </div> <!-- /container -->
 
-    <div class="foot" style="font-size: 12px;color: #666;padding-top: 10px;border-top: 1px solid #CCC;">
+    <div class="foot" style="margin-top: 20px; font-size: 12px;color: #666;padding-top: 10px;border-top: 1px solid #CCC;">
           <p class="l">易度云查看: 在线查看文档最佳解决方案 | 广州润普网络科技有限公司 版权所有 &copy; 2002-2014 粤ICP备11098433<a style="float:right;" href="http://www.everydo.com/" target="_blank">易度云办公旗下网站</a></p>
           <div class="clear"></div>
       </div>
