--- a/themes/bootstrap/home.html
+++ b/themes/bootstrap/home.html
@@ -6,6 +6,7 @@
     <meta content="$description" name="description" />
     <meta content="在线查看文档,云查看" name="keyword" />
     <meta name="author" content="">
+    <link rel="shortcut icon" type="image/x-icon" href="/themes/viewer/images/favicon.ico" />
     <title>$title - $site_title</title>
 
     <!-- Bootstrap core CSS -->
@@ -15,9 +16,6 @@
 
     <!-- Custom styles for this template -->
     <link href="http://v3.bootcss.com/examples/theme/theme.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -60,16 +58,15 @@
     </div> <!-- /container -->
 
     <div class="foot" style="margin-top: 20px; font-size: 12px;color: #666;padding-top: 10px;border-top: 1px solid #CCC;">
-          <p class="l">易度云查看: 在线查看文档最佳解决方案 | 广州润普网络科技有限公司 版权所有 &copy; 2002-2014 粤ICP备11098433<a style="float:right;" href="http://www.everydo.com/" target="_blank">易度云办公旗下网站</a></p>
+          <p class="l">易度云查看: 在线查看文档最佳解决方案 | 广州润普网络科技有限公司 版权所有 &copy; 2002-2014 粤ICP备11098433<a style="float:right;" href="http://www.everydo.com/" target="_blank">易度云办公旗下网站</a> | <script src="http://s14.cnzz.com/stat.php?id=3380953&web_id=3380953" language="JavaScript"></script></p>
           <div class="clear"></div>
       </div>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="./Theme Template for Bootstrap_files/jquery.min.js"></script>
-    <script src="./Theme Template for Bootstrap_files/bootstrap.min.js"></script>
-    <script src="./Theme Template for Bootstrap_files/holder.min.js"></script>
-  
+    <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
+    <script src="http://v3.bootcss.com/dist/js/bootstrap.min.js"></script>
+    <script src="http://cdn.bootcss.com/holder/2.0/holder.min.js"></script>
 
 </body></html>
