--- a/themes/bootstrap/default.html
+++ b/themes/bootstrap/default.html
@@ -1,81 +1,72 @@
 <!DOCTYPE html>
-<html lang="zh-cn"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="zh-cn">
+  <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta content="$description" name="description" />
-    <meta content="在线查看文档,云查看" name="keyword" />
+    <!-- 禁用移动设备浏览器的缩放功能 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta content="$description" name="description">
     <meta name="author" content="">
-    <link rel="shortcut icon" type="image/x-icon" href="/themes/viewer/images/favicon.ico" />
+    <link rel="shortcut icon" href="/themes/bootstrap/images/favicon.ico">
+
     <title>$title - $site_title</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="http://v3.bootcss.com/dist/css/bootstrap.css" rel="stylesheet">
-    <!-- Bootstrap theme -->
-    <link href="http://v3.bootcss.com/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+    <!-- Bootstrap 核心CSS -->
+    <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css">
+    <!-- Bootstrap 主题 -->
+    <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap-theme.min.css">
+    <!-- 自定义样式 -->
+    <link href="/themes/bootstrap/style/default.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="http://v3.bootcss.com/examples/theme/theme.css" rel="stylesheet">
+    <script src="http://viewer.everydo.com:9870/edoviewer/edo_viewer.js"></script>
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="http://cdn.bootcss.com/html5shiv/3.7.0/html5shiv.min.js"></script>
-      <script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
+        <script src="http://cdn.bootcss.com/html5shiv/3.7.0/html5shiv.min.js"></script>
+        <script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
-  <style type="text/css"></style>
-  <style id="holderjs-style" type="text/css"></style>
-  <script src="http://viewer.everydo.com:9870/edoviewer/edo_viewer.js"></script>
   </head>
-
   <body>
 
-    <!-- Fixed navbar -->
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
+        <!-- 移动设备浏览器切换导航 -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <!-- <span class="sr-only">Toggle navigation</span> -->
+            <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" style="color: #000;"href="/">易度云查看 - 在线查看文档</a>
+          <a class="navbar-brand logo" href="/" title="易度云查看"></a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav" style="float: right;">
+          <ul class="nav navbar-nav navbar-right">
             $nav
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </div>
 
-  <div class="container">
-      <!-- Docs nav
-      ================================================== -->
+    <div class="container fix-padding">
       <div class="row">
-        <div class="span3 bs-docs-sidebar">
-          $left
-          </div>
-
-          <div class="span9">
-          $content
-          </div>
+        <div class="col-sm-3"><sidebar></sidebar></div>
+        <div class="col-sm-9">$content</div>
       </div>
+    </div>
 
-      <div class="foot" style="margin-top: 20px; font-size: 12px;color: #666;padding-top: 10px;border-top: 1px solid #CCC;">
-          <p class="l">易度云查看: 在线查看文档最佳解决方案 | 广州润普网络科技有限公司 版权所有 &copy; 2002-2014 粤ICP备11098433
-            <a style="float:right;" href="http://www.everydo.com/" target="_blank">易度云办公旗下网站</a> | <script src="http://s14.cnzz.com/stat.php?id=3380953&web_id=3380953" language="JavaScript"></script></p>
-          <div class="clear"></div>
-      </div>
-  </div>
+    <div class="foot text-center">
+      <p>广州润普网络科技有限公司 版权所有 &copy; 2002-2014</p>
+      <p>粤ICP备11098433 | <a href="http://www.everydo.com/" target="_blank">易度云办公旗下网站</a> | <script src="http://s14.cnzz.com/stat.php?id=3380953&web_id=3380953" language="JavaScript"></script></p>
+    </div>
 
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
-    <script src="http://v3.bootcss.com/dist/js/bootstrap.min.js"></script>
-    <script src="http://cdn.bootcss.com/holder/2.0/holder.min.js"></script>
-  
-
-</body></html>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
+    <script>
+      $$('aside').appendTo('sidebar')
+    </script>
+  </body>
+</html>
