--- a/themes/bootstrap/home.html
+++ b/themes/bootstrap/home.html
@@ -29,7 +29,7 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="navbar navbar-default" role="navigation">
       <div class="container">
         <!-- 移动设备浏览器切换导航 -->
         <div class="navbar-header">
