--- a/themes/bootstrap/default.html
+++ b/themes/bootstrap/default.html
@@ -7,21 +7,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta content="$description" name="description">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="/themes/bootstrap/images/favicon.ico">
+    <link rel="shortcut icon" href="/themes/bootstrap/img/favicon.ico">
 
     <title>$title - $site_title</title>
 
     <!-- Bootstrap 核心CSS -->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap.min.css">
-    <!-- Bootstrap 主题 -->
-    <link rel="stylesheet" href="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/css/bootstrap-theme.min.css">
+    <link href="/themes/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+
     <!-- 自定义样式 -->
-    <link href="/themes/bootstrap/style/default.css" rel="stylesheet">
+    <link href="/themes/bootstrap/css/default.css" rel="stylesheet">
+
+    <link href="/themes/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    
 
     <script src="http://viewer.everydo.com:9870/edoviewer/edo_viewer.js"></script>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if IE 6]>
+      <link href="/themes/bootstrap/css/ie6.min.css" rel="stylesheet">
+    <![endif]-->
+
+    <!--[if IE 6]>
+      <style>
+      .target-fix {
+        position: relative;
+        top: 0px;
+        display: block;
+        height: 0;
+      }
+      </style>
+    <![endif]-->
+
     <!--[if lt IE 9]>
         <script src="http://cdn.bootcss.com/html5shiv/3.7.0/html5shiv.min.js"></script>
         <script src="http://cdn.bootcss.com/respond.js/1.3.0/respond.min.js"></script>
@@ -29,34 +44,32 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default" role="navigation">
-      <div class="container">
-        <!-- 移动设备浏览器切换导航 -->
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
+    <div class="navbar navbar-default navbar-fixed-top target-fix">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand logo" href="/" title="易度云查看"></a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            $nav
-          </ul>
+          <a class="logo" href="/" title="易度云查看"></a>
+          <div class="nav-collapse collapse">
+            <ul class="nav pull-right">
+              $nav
+            </ul>
+          </div>
         </div>
       </div>
     </div>
 
     <div class="container fix-padding">
-      <div class="row pin-here">
-        <div class="col-sm-3"><div class="pinned">$left</div></div>
-        <div class="col-sm-9">$content</div>
+      <div class="row-fluid pin-here">
+        <div class="span3"><div class="pinned">$left</div></div>
+        <div class="span9">$content</div>
       </div>
     </div>
 
-    <div class="foot text-center">
+    <div class="footer text-center">
       <p>广州润普网络科技有限公司 版权所有 &copy; 2002-2014</p>
       <p>粤ICP备11098433 | <a href="http://www.everydo.com/" target="_blank">易度云办公旗下网站</a> | <script src="http://s14.cnzz.com/stat.php?id=3380953&web_id=3380953" language="JavaScript"></script></p>
     </div>
@@ -69,6 +82,7 @@
     <script>
       $$('aside').prependTo('.pinned');
       $$(".pinned").pin({containerSelector: ".pin-here", minWidth: 940});
+      $$(function(){if($$.browser.msie&&parseInt($$.browser.version,10)===6){$$('.row div[class^="span"]:last-child').addClass("last-child");$$('[class*="span"]').addClass("margin-left-20");$$(':button[class="btn"], :reset[class="btn"], :submit[class="btn"], input[type="button"]').addClass("button-reset");$$(":checkbox").addClass("input-checkbox");$$('[class^="icon-"], [class*=" icon-"]').addClass("icon-sprite");$$(".pagination li:first-child a").addClass("pagination-first-child")}})
     </script>
   </body>
 </html>
