兼容性改进

--- a/themes/bootstrap/home.html
+++ b/themes/bootstrap/home.html
@@ -26,17 +26,20 @@
       cloudview('http://viewer.everydo.com:9870/');
     </script>
 
-    <!--[if IE 6]>
+    <!--[if IE]>
       <link href="/themes/bootstrap/css/ie6.min.css" rel="stylesheet">
     <![endif]-->
 
-    <!--[if IE 6]>
+    <!--[if IE]>
       <style>
       .target-fix {
         position: relative;
         top: 0px;
         display: block;
         height: 0;
+      }
+      h1 {
+        padding-top: 40px;
       }
       </style>
     <![endif]-->
