恢复误删操作

--- a/themes/bootstrap/home.html
+++ b/themes/bootstrap/home.html
@@ -26,7 +26,23 @@
       cloudview('http://viewer.everydo.com:9870/');
     </script>
 
+    <!--[if IE]>
+      <link href="/themes/bootstrap/css/ie6.min.css" rel="stylesheet">
+    <![endif]-->
 
+    <!--[if IE]>
+      <style>
+        .target-fix {
+        position: relative;
+        top: 0px;
+        display: block;
+        height: 0;
+      }
+      h1 {
+        padding-top: 40px;
+      }
+      </style>
+    <![endif]-->
 
     <!--[if lt IE 9]>
         <script src="http://cdn.bootcss.com/html5shiv/3.7.0/html5shiv.min.js"></script>
