--- a/themes/bootstrap/default.html
+++ b/themes/bootstrap/default.html
@@ -62,7 +62,7 @@
       </div>
     </div>
 
-    <div class="container fix-padding" style="clear: both">
+    <div class="container fix-padding">
       <div class="row-fluid pin-here">
         <div class="span3"><div class="pinned">$left</div></div>
         <div class="span9">$content</div>
