修改文件夹路径

--- a/themes/viewer-bootstrap/home.html
+++ b/themes/viewer-bootstrap/home.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta content="$description" name="description">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="/themes/bootstrap/img/favicon.ico">
+    <link rel="shortcut icon" href="$theme_base/img/favicon.ico">
 
     <title>$title - $site_title</title>
 
     <!-- Bootstrap 核心CSS -->
-    <link href="/themes/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="$theme_base/css/bootstrap.min.css" rel="stylesheet" media="screen">
 
     <!-- 自定义样式 -->
-    <link href="/themes/bootstrap/css/home.css" rel="stylesheet">
+    <link href="$theme_base/css/home.css" rel="stylesheet">
 
-    <link href="/themes/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="$theme_base/css/bootstrap-responsive.css" rel="stylesheet">
     
 
     <script src="http://viewer.everydo.com:9870/edoviewer/api.js"></script>
@@ -27,7 +27,7 @@
     </script>
 
     <!--[if IE]>
-      <link href="/themes/bootstrap/css/ie6.min.css" rel="stylesheet">
+      <link href="$theme_base/css/ie6.min.css" rel="stylesheet">
     <![endif]-->
 
     <!--[if IE]>
@@ -77,7 +77,7 @@
     </div>
 
     <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
-    <script src="/themes/bootstrap/js/bootstrap.min.js"></script>
+    <script src="$theme_base/js/bootstrap.min.js"></script>
 
   <script>
     $$(function(){if($$.browser.msie&&parseInt($$.browser.version,10)===6){$$('.row div[class^="span"]:last-child').addClass("last-child");$$('[class*="span"]').addClass("margin-left-20");$$(':button[class="btn"], :reset[class="btn"], :submit[class="btn"], input[type="button"]').addClass("button-reset");$$(":checkbox").addClass("input-checkbox");$$('[class^="icon-"], [class*=" icon-"]').addClass("icon-sprite");$$(".pagination li:first-child a").addClass("pagination-first-child")}})
