--- a/themes/viewer-bootstrap/default.html
+++ b/themes/viewer-bootstrap/default.html
@@ -7,23 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta content="$description" name="description">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="/themes/bootstrap/img/favicon.ico">
+    <link rel="shortcut icon" href="$theme_base/img/favicon.ico">
 
     <title>$title - $site_title</title>
 
     <!-- Bootstrap 核心CSS -->
-    <link href="/themes/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="$theme_base/css/bootstrap.min.css" rel="stylesheet" media="screen">
 
     <!-- 自定义样式 -->
-    <link href="/themes/bootstrap/css/default.css" rel="stylesheet">
+    <link href="$theme_base/css/default.css" rel="stylesheet">
 
-    <link href="/themes/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="$theme_base/css/bootstrap-responsive.css" rel="stylesheet">
     
 
     <script src="http://viewer.everydo.com:9870/edoviewer/edo_viewer.js"></script>
 
     <!--[if IE]>
-      <link href="/themes/bootstrap/css/ie6.min.css" rel="stylesheet">
+      <link href="$theme_base/css/ie6.min.css" rel="stylesheet">
     <![endif]-->
 
     <!--[if IE]>
