--- a/themes/viewer-bootstrap/default.html
+++ b/themes/viewer-bootstrap/default.html
@@ -34,6 +34,9 @@
         display: block;
         height: 0;
       }
+      .fix-padding {
+      padding-top: 40px;
+      }
       </style>
     <![endif]-->
 
@@ -44,14 +47,14 @@
   </head>
   <body>
 
-    <div class="navbar navbar-default navbar-fixed-top target-fix">
+    <div class="navbar target-fix">
       <div class="navbar-inner">
         <div class="container">
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-          </button>
+          </a>
           <a class="logo" href="/" title="易度云查看"></a>
           <div class="nav-collapse collapse">
             <ul class="nav pull-right">
