--- a/themes/viewer-bootstrap/home.html
+++ b/themes/viewer-bootstrap/home.html
@@ -78,7 +78,8 @@
 
     <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
     <script src="$theme_base/js/bootstrap.min.js"></script>
-
+	<script src="$theme_base/js/bootstrap-ie.js"></script>
+	
   <script>
     $$(function(){if($$.browser.msie&&parseInt($$.browser.version,10)===6){$$('.row div[class^="span"]:last-child').addClass("last-child");$$('[class*="span"]').addClass("margin-left-20");$$(':button[class="btn"], :reset[class="btn"], :submit[class="btn"], input[type="button"]').addClass("button-reset");$$(":checkbox").addClass("input-checkbox");$$('[class^="icon-"], [class*=" icon-"]').addClass("icon-sprite");$$(".pagination li:first-child a").addClass("pagination-first-child")}})
   </script>
