--- a/themes/viewer-bootstrap/home.html
+++ b/themes/viewer-bootstrap/home.html
@@ -17,7 +17,7 @@
     <!-- 自定义样式 -->
     <link href="$theme_base/css/home.css" rel="stylesheet">
 
-    <link href="$theme_base/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="$theme_base/css/bootstrap-responsive.min.css" rel="stylesheet">
     
 
     <script src="http://viewer.everydo.com:9870/edoviewer/api.js"></script>
