--- a/themes/viewer-bootstrap/home.html
+++ b/themes/viewer-bootstrap/home.html
@@ -76,7 +76,7 @@
       <p>粤ICP备11098433 | <a href="http://www.everydo.com/" target="_blank">易度云办公旗下网站</a> | <script src="http://s14.cnzz.com/stat.php?id=3380953&web_id=3380953" language="JavaScript"></script></p>
     </div>
 
-    <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
+    <script src="$theme_base/js/jquery-1.8.3.min.js"></script>
     <script src="$theme_base/js/bootstrap.min.js"></script>
 	<script src="$theme_base/js/bootstrap-ie.js"></script>
 	
