--- a/themes/viewer-bootstrap/default.html
+++ b/themes/viewer-bootstrap/default.html
@@ -78,7 +78,7 @@
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="http://cdn.bootcss.com/jquery/1.10.2/jquery.min.js"></script>
+    <script src="$theme_base/js/jquery-1.8.3.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="http://www.bootcss.com/p/jquery.pin/jquery.pin.js"></script>
