--- a/themes/viewer-bootstrap/default.html
+++ b/themes/viewer-bootstrap/default.html
@@ -82,7 +82,8 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="http://www.bootcss.com/p/jquery.pin/jquery.pin.js"></script>
-	<script src="$theme_base/js/bootstrap-ie.js"></script>
+    <script src="$theme_base/js/bootstrap-ie.js"></script>
+    <script src="http://viewer.everydo.com:9870/edoviewer/jquery.fullscreen.js"></script>
     <script>
       $$('aside').prependTo('.pinned');
       $$(".pinned").pin({containerSelector: ".pin-here", minWidth: 940});
