--- a/themes/viewer-bootstrap/default.html
+++ b/themes/viewer-bootstrap/default.html
@@ -18,9 +18,9 @@
     <link href="$theme_base/css/default.css" rel="stylesheet">
 
     <link href="$theme_base/css/bootstrap-responsive.min.css" rel="stylesheet">
-    
+    <link rel="stylesheet" href="http://viewer.everydo.com:9870/static/slimbox2.css" type="text/css">
 
-    <script src="http://viewer.everydo.com:9870/edoviewer/edo_viewer.js"></script>
+    <script src="http://viewer.everydo.com:9870/static/edo_viewer.js"></script>
 
     <!--[if IE]>
       <link href="$theme_base/css/ie6.min.css" rel="stylesheet">
@@ -83,7 +83,8 @@
     <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="http://www.bootcss.com/p/jquery.pin/jquery.pin.js"></script>
     <script src="$theme_base/js/bootstrap-ie.js"></script>
-    <script src="http://viewer.everydo.com:9870/edoviewer/jquery.fullscreen.js"></script>
+    <script src="http://viewer.everydo.com:9870/static/jquery.fullscreen.js"></script>
+    <script src="http://viewer.everydo.com:9870/static/slimbox2.js"></script>
     <script>
       $$('aside').prependTo('.pinned');
       $$(".pinned").pin({containerSelector: ".pin-here", minWidth: 940});
