--- a/themes/viewer-bootstrap/home.html
+++ b/themes/viewer-bootstrap/home.html
@@ -18,10 +18,11 @@
     <link href="$theme_base/css/home.css" rel="stylesheet">
 
     <link href="$theme_base/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://viewer.everydo.com:9870/static/slimbox2.css" type="text/css">
     
 
-    <script src="http://viewer.everydo.com:9870/edoviewer/api.js"></script>
-    <script src="http://viewer.everydo.com:9870/edoviewer/edo_viewer.js"></script>
+    <script src="http://viewer.everydo.com:9870/static/api.js"></script>
+    <script src="http://viewer.everydo.com:9870/static/edo_viewer.js"></script>
     <script>
       cloudview('http://viewer.everydo.com:9870/');
     </script>
@@ -79,7 +80,8 @@
     <script src="$theme_base/js/jquery-1.8.3.min.js"></script>
     <script src="$theme_base/js/bootstrap.min.js"></script>
     <script src="$theme_base/js/bootstrap-ie.js"></script>
-    <script src="http://viewer.everydo.com:9870/edoviewer/jquery.fullscreen.js"></script>
+    <script src="http://viewer.everydo.com:9870/static/jquery.fullscreen.js"></script>
+    <script src="http://viewer.everydo.com:9870/static/slimbox2.js"></script>
 	
   <script>
     $$(function(){if($$.browser.msie&&parseInt($$.browser.version,10)===6){$$('.row div[class^="span"]:last-child').addClass("last-child");$$('[class*="span"]').addClass("margin-left-20");$$(':button[class="btn"], :reset[class="btn"], :submit[class="btn"], input[type="button"]').addClass("button-reset");$$(":checkbox").addClass("input-checkbox");$$('[class^="icon-"], [class*=" icon-"]').addClass("icon-sprite");$$(".pagination li:first-child a").addClass("pagination-first-child")}})
