--- a/themes/viewer-bootstrap/default.html
+++ b/themes/viewer-bootstrap/default.html
@@ -19,7 +19,10 @@
 
     <link href="$theme_base/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://viewer.everydo.com:9870/static/slimbox2.css" type="text/css">
-
+    <link rel="stylesheet" href="http://viewer.everydo.com:9870/static/box/dist/crocodoc.viewer.min.css" type="text/css">
+    
+    <script src="$theme_base/js/jquery-1.8.3.min.js"></script>
+    <script src="http://viewer.everydo.com:9870/static/box/dist/my.crocodoc.viewer.min.js"></script>
     <script src="http://viewer.everydo.com:9870/static/edo_viewer.js"></script>
 
     <!--[if IE]>
@@ -78,7 +81,6 @@
     </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="$theme_base/js/jquery-1.8.3.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="http://www.bootcss.com/p/jquery.pin/jquery.pin.js"></script>
