--- a/themes/viewer-bootstrap/home.html
+++ b/themes/viewer-bootstrap/home.html
@@ -19,8 +19,10 @@
 
     <link href="$theme_base/css/bootstrap-responsive.min.css" rel="stylesheet">
     <link rel="stylesheet" href="http://viewer.everydo.com:9870/static/slimbox2.css" type="text/css">
+    <link rel="stylesheet" href="http://viewer.everydo.com:9870/static/box/dist/crocodoc.viewer.min.css" type="text/css">
     
-
+    <script src="$theme_base/js/jquery-1.8.3.min.js"></script>
+    <script src="http://viewer.everydo.com:9870/static/box/dist/my.crocodoc.viewer.min.js"></script>
     <script src="http://viewer.everydo.com:9870/static/api.js"></script>
     <script src="http://viewer.everydo.com:9870/static/edo_viewer.js"></script>
     <script>
